We can create a file with a name provided by the user, encrypt it with the public key, send it, decrypt it and save it